# syndr

./: .gitignore  Cargo.toml  README.md
migrate/: Cargo.toml
migrate/src/: m20220101_000001_create_table.rs
src/: main.rs
src/entity/: feeds.rs  mod.rs  prelude.rs  users.rs
