[package]
name = "syndr"
version = "0.1.0"
edition = "2021"
authors = ["Tim Kellogg"]
description = "Follow RSS & Atom feeds on the fediverse"
license = "Apache-2.0"
homepage = ""
repository = ""
documentation = ""
rust-version = "1.65"

[dependencies]
anyhow = "1.0.66"
axum = "0.6.0"
serde = "1.0.147"
sea-orm = "0.10.1"
syndication = "0.5.0"
tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
tracing = "0.1.37"
